# Image-Classification

./: LICENSE  install.sh  pyproject.toml
features/: pyproject.toml
image-classification/src/: train.py
logger_util/: pyproject.toml
logger_util/logger_util/: filter_logger.py  rotating_logger.py
pytorch_custom/: pyproject.toml
pytorch_custom/pytorch_custom/: pytorch_base.py  pytorch_minst.py
pytorch_custom/tests/: test_base_model.py
src/: pyproject.toml
utilities/: pyproject.toml
utilities/utilities/: get_minst_data.py
