[tool.poetry]
name = "image-classification"
version = "0.1.0"
description = "\"Image classification on MINST dataset\""
authors = ["Karan Verma <vkaran969@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
opencv-python = "^4.9.0.80"
tensorflow = "^2.16.1"
pytest = "^8.1.1"
logging = "^0.4.9.6"
datasets = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
